Refactored using new Java features.