@@ -2,7 +2,6 @@ package com.alexkrasnova.githubrepositoryservice.service;
 
 import com.alexkrasnova.githubrepositoryservice.client.github.GithubClient;
 import com.alexkrasnova.githubrepositoryservice.client.github.dto.BranchGithubDTO;
-import com.alexkrasnova.githubrepositoryservice.client.github.dto.RepositoryGithubDTO;
 import com.alexkrasnova.githubrepositoryservice.dto.RepositoryDTO;
 import com.alexkrasnova.githubrepositoryservice.mapper.RepositoryMapper;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +9,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,12 +21,12 @@ public class RepositoryService {
 
     public List<RepositoryDTO> findByOwner(String ownerLogin) {
         log.info("getting repositories of user " + ownerLogin);
-        List<RepositoryGithubDTO> repositories = githubClient.findRepositoriesByOwner(ownerLogin);
+        var repositories = githubClient.findRepositoriesByOwner(ownerLogin);
 
         return repositories.stream()
                 .filter(x -> !x.fork())
                 .map(repository -> repositoryMapper.mapToRepositoryDTO(repository, getBranches(ownerLogin, repository.name())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<BranchGithubDTO> getBranches(String owner, String repositoryName) {
